--- a/style.css
+++ b/style.css
@@ -169,6 +169,14 @@
     transition-delay: 0.4s;
   }
 
+  .ocultar-after{
+    width: 80%;
+    font-size: 11px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+
 
 
   @media screen and (max-width: 640px) {
